--- a/index.html
+++ b/index.html
@@ -269,11 +269,21 @@
                 top: 10px;
                 right: 10px;
                 padding: 0.75rem 1rem;
-                min-width: 120px;
+                min-width: 100px;
+            }
+
+            .score-label {
+                font-size: 0.625rem;
             }
 
             .score-value {
-                font-size: 1.5rem;
+                font-size: 1.25rem;
+            }
+
+            .score-rating {
+                font-size: 0.625rem;
+                padding: 0.2rem 0.5rem;
+                margin-top: 0.35rem;
             }
 
             button {
